--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/native": "^6.0.16",
     "@react-navigation/stack": "^6.3.7",
+    "@supabase/supabase-js": "^2.1.1",
     "expo": "~47.0.8",
     "expo-app-loading": "~2.1.1",
     "expo-splash-screen": "~0.17.5",
@@ -20,6 +22,7 @@
     "react-native-gesture-handler": "~2.8.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-url-polyfill": "^1.3.0",
     "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
