--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "final-project",
-    "slug": "final-project",
+    "slug": "daha",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -28,6 +28,12 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "7d4e720a-51eb-4855-b573-d017fed23f1f"
+      }
+    },
+    "owner": "dahateam"
   }
 }
